--- a/Kaiserreich Korean Translation/localisation/KR_Hawaii_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Hawaii_l_english.yml
@@ -9,7 +9,7 @@ HAW_monarchy:0 "왕정 복고"
 HAW_monarchy_desc:0 "We have decided to restore the monarchy and crown Jonah Kuhio Kalanianaʻole as king of Hawaii. All have gathered at the ʻIolani Palace in Honolulu watch the ceremony. Today is a great day as native rule has been restored to Hawai'i."
 HAW_return_ceded_lands:0 "빼앗긴 땅 탈환"
 HAW_return_ceded_lands_desc:0 "The Ceded lands where lands that forcibly given to the United States government following the overthrow of the Monarchy in 1898. Now that the monarchy has been restored it is time to return the Ceded Lands to the Crown and give them back to the people, back to the native Hawai'ians."
-HAW_constitutional_monarchy:0 "입헌 군주정"
+HAW_constitutional_monarchy:0 "입헌군주정"
 HAW_constitutional_monarchy_desc:0 "We shall set up our monarchy to be a constitutional Monarchy. The kingdom of Hawai'i was a constitutional monarchy from 1840 to the overthrow. In time we shall call for elections for the Kuhina Nui or our Prime Minister."
 HAW_punana_leo:0 "푸나나 레오"
 HAW_punana_leo_desc:0 "Meaning Language Nests, the Punana Leo is a school program that the monarchy has proposed to restore the usage of the native Hawai'ian Language among the people. As part of the program numerous schools would be established throughout the kingdom on all the different islands."
@@ -121,7 +121,7 @@ HAW_american_freindship:0 "American Friendship"
 HAW_american_freindship_desc:0 "Now that we are part of the League of American States we should work on improving our relations with the Americans and help resolve the issues that we have in the past."
 HAW_american_tech_sharing:0 "University of the Free World"
 HAW_american_tech_sharing_desc:0 "Now that we are fully part of the League of American States, we should join the University of the Free World. This program will help better educate the people of Hawai'i for the future and do our part in keeping the Americas safe."
-HAW_international:0 "인터네셔널 가입"
+HAW_international:0 "인터내셔널 가입"
 HAW_international_desc:0 "With the revolution now complete and the workers now in charge of Hawai'i it is only natural that we petition the French to invite us into the International. This way we shall do our part in fighting capitalism world wide."
 HAW_revolutionary_business:0 "혁명적인 무역"
 HAW_revolutionary_business_desc:0 "Now that we are part of the International we should work on establishing trade with the other members of the International. Though far away we can still help the workers of Europe and beyond from Hawai'i."
@@ -380,14 +380,14 @@ hawaii.43.b:0 "급진 좌파가 이긴다"
 hawaii.43.c:0 "진보당이 이긴다"
 
 
-hawaii.100.t:0 "하와이가 인터네셔널 가입을 요청하다"
+hawaii.100.t:0 "하와이가 인터내셔널 가입을 요청하다"
 hawaii.100.d:0 "We have received a request from the Commune of Hawaii to join the International. A few years back this tiny land broke off from America and went through there own revolution. The strategic position of Hawaii makes them a valuable member for the International. However others were concerned about getting dragged into conflicts in that region."
 hawaii.100.a:0 "기쁘게 맞이해라"
 hawaii.100.b:0 "도발적인 행동은 피해야 한다."
-hawaii.101.t:0 "하와이가 인터네셔널에 가입하다"
+hawaii.101.t:0 "하와이가 인터내셔널에 가입하다"
 hawaii.101.d:0 "The International has accepted our petition for entry. Hawai'i may just be able to survive with some strong allies."
 hawaii.101.a:0 "기쁘게 맞이해라"
-hawaii.102.t:0 "인터네셔널이 하와이를 거부하다"
+hawaii.102.t:0 "인터내셔널이 하와이를 거부하다"
 hawaii.102.d:0 "The International has refused our request for an alliance, Hawai'i will stand alone."
 hawaii.102.a:0 "젠장"
 
