--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_in_Exile_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_in_Exile_l_english.yml
@@ -22,8 +22,8 @@ hol_in_ex.4.t:0 "네덜란드 망명 정부가 우리의 동맹 가입을 원합
 hol_in_ex.4.d:0 "네덜란드 망명 정부가 우리의 동맹 참여를 요청했습니다. 여당 내각과 군대를 포함한 많은 사회에서 친-일본 정책이 인기 있기 때문에 이상한 일은 아닙니다. 추방된 왕족들이 우리의 동맹에 참여하는 것을 허락할까요?"
 hol_in_ex.4.a:0 "좋아!"
 hol_in_ex.4.b:0 "오히려 거부한다"
-hol_in_ex.5.t:0 "네덜란드 망명 정부가 제국협정 가입을 원합니다"
-hol_in_ex.5.d:0 "네덜란드 망명 정부가 제국협정 참여를 요청했습니다. 여당 내각과 군대를 포함한 많은 사회에서 친-제국협정 정책이 인기 있기 때문에 이상한 일은 아닙니다. 추방된 왕족들이 우리의 동맹에 참여하는 것을 허락할까요?"
+hol_in_ex.5.t:0 "네덜란드 망명 정부가 제국 조약 가입을 원합니다"
+hol_in_ex.5.d:0 "네덜란드 망명 정부가 제국 조약 참여를 요청했습니다. 여당 내각과 군대를 포함한 많은 사회에서 친-제국 조약 정책이 인기 있기 때문에 이상한 일은 아닙니다. 추방된 왕족들이 우리의 동맹에 참여하는 것을 허락할까요?"
 hol_in_ex.5.a:0 "좋아!"
 hol_in_ex.5.b:0 "오히려 거부한다"
 hol_in_ex.6.t:0 "우리의 요청이 거절당했습니다!"
