--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -1167,7 +1167,7 @@ OTT_Emergency_Mobilisation:0 "긴급 동원"
 OTT_Fortify_Aleppo:0 "알레포 요새화"
 OTT_Fortify_Bagdhad:0 "바그다드 요새화"
 OTT_Flood_the_Euphrates_Plain:0 "유프라테스 강과 티그리스 평원 홍수"
-OTT_Request_arms_from_the_Reichspakt:0 "제국 협정으로부터의 무기 요청"
+OTT_Request_arms_from_the_Reichspakt:0 "제국 조약으로부터의 무기 요청"
 
 #AXIS DECISIONS
 Axis_Advances:0 "오스만 캠페인"
