--- a/Kaiserreich Korean Translation/localisation/KR_Republic_of_Italy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Republic_of_Italy_l_english.yml
@@ -461,7 +461,7 @@ ITA_rule_the_skies_desc:0 "The airforce is no longer a rag-tag collection of vol
 ### Events ###
 
 ita.1.t:0 "1936년의 이탈리아 공화국"
-ita.1.d:0 "1919년 프랑스가 패배하고 로마가 함락되자 지친 이탈리아는 오스트리아인들의 수중에 들어갔고 통일 이전의 국가들로 다시 나뉘어질 것처럼 보였습니다. 치욕스러운 항복 선언으로부터 몇 시간 후 분노한 민족주의자들이 밀라노에서 새로운 이탈리아 공화국을 선언했고 사보이 왕가가 맺은 모든 조약은 무효로 취급되었습니다. 하지만 그리 멀지 않은 토리노에서 이에 경쟁하는 사회주의 공화국이 며칠 후 선언되었습니다. 이탈리아를 분할하려던 오스트리아의 계획은 휴지조각이 되고야 말았습니다.\n\n내전이 벌어지고 전투가 계속되자 오스트리아인들과 그들의 주둔군은 사회주의자들과 그들의 프랑스인 후원자들을 공통의 적으로 보고 새로운 민족주의 공화국의 옆에서 싸우게 되었습니다. 포 강에서 기적적인 승리를 거두었지만 이전까지 적들은 협력을 계속해야만한다는 현실을 감내할 수 밖에 없었습니다. 오스트리아는 이탈리아 공화국을 유일한 합법 정부로 인정해야만 했고 민족주의자들은 오스트리아인들과 일하는 것과 그것이 가져올 달갑지 않은 영향력을 받아들여야만 했습니다.\n\n초반의 우려에도 불구하고 오스트리아와 독일의 제국 협정으로부터 힘을 얻으면서 이 동맹은 천천히 새로운 공화국의 경제적 상황을 증진시켰고 내전으로부터 회복되었을 때는 많은 이들이 그 미래를 기대하게 되었습니다. 이바노에 보노미 총리와 그의 동지들은 경제적 성공에 고무되어서 이탈리아의 나머지를 이탈리아의 법률 상의 영토로 주장했고 또 다른 이탈리아 전쟁이 일어나는 것은 시간문제입니다."
+ita.1.d:0 "1919년 프랑스가 패배하고 로마가 함락되자 지친 이탈리아는 오스트리아인들의 수중에 들어갔고 통일 이전의 국가들로 다시 나뉘어질 것처럼 보였습니다. 치욕스러운 항복 선언으로부터 몇 시간 후 분노한 민족주의자들이 밀라노에서 새로운 이탈리아 공화국을 선언했고 사보이 왕가가 맺은 모든 조약은 무효로 취급되었습니다. 하지만 그리 멀지 않은 토리노에서 이에 경쟁하는 사회주의 공화국이 며칠 후 선언되었습니다. 이탈리아를 분할하려던 오스트리아의 계획은 휴지조각이 되고야 말았습니다.\n\n내전이 벌어지고 전투가 계속되자 오스트리아인들과 그들의 주둔군은 사회주의자들과 그들의 프랑스인 후원자들을 공통의 적으로 보고 새로운 민족주의 공화국의 옆에서 싸우게 되었습니다. 포 강에서 기적적인 승리를 거두었지만 이전까지 적들은 협력을 계속해야만한다는 현실을 감내할 수 밖에 없었습니다. 오스트리아는 이탈리아 공화국을 유일한 합법 정부로 인정해야만 했고 민족주의자들은 오스트리아인들과 일하는 것과 그것이 가져올 달갑지 않은 영향력을 받아들여야만 했습니다.\n\n초반의 우려에도 불구하고 오스트리아와 독일의 제국 조약으로부터 힘을 얻으면서 이 동맹은 천천히 새로운 공화국의 경제적 상황을 증진시켰고 내전으로부터 회복되었을 때는 많은 이들이 그 미래를 기대하게 되었습니다. 이바노에 보노미 총리와 그의 동지들은 경제적 성공에 고무되어서 이탈리아의 나머지를 이탈리아의 법률 상의 영토로 주장했고 또 다른 이탈리아 전쟁이 일어나는 것은 시간문제입니다."
 ita.1.a:0 ""이탈리아여 전진하라!(Forward Italia!)"
 
 ita.2.t:0 "검은 월요일이 공화국을 강타하다"
