--- a/Kaiserreich Korean Translation/localisation/KR_Siam_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Siam_l_english.yml
@@ -62,21 +62,21 @@ SIA_World_Granary_idea:0 "Granary of the World"
 SIA_World_Granary_idea_desc:0 "Siam has always had a strong tradition of rice production. We have the fifth-largest amount of land globally diverted to rice cultivation efforts and are now aiming to become the world's largest largest exporter of rice."
 SIA_Reformed_Judiciary:0 "개혁된 사법부"
 SIA_Reformed_Judiciary_desc:0 "Our laws are now modernised to better reflect and work with our modern society. Gone are the days of barbaric and draconian Ayutthaya-era laws."
-SIA_Centralized_Police_idea:0 "중앙화된 경찰지휘부"
+SIA_Centralized_Police_idea:0 "중앙화된 경찰 지휘부"
 SIA_Centralized_Police_idea_desc:0 "With the Royal Siamese Police command now under the direct control of the Prime Minister more funding has been diverted towards the organisation to increase its effectiveness."
 SIA_SDSI_idea:0 "시암 비밀 정보국(SDSI)"
 SIA_SDSI_idea_desc:0 "SDSI stands for the \"Siam Department of Secret Intelligence\", an organisation that is in charge of protecting our domestic and international interests."
 SIA_IndNat_Income:0 "시암의 배상금"
 SIA_IndNat_Income_desc:0 "Premier Plaek Phibunsongkhram has offered monetary compensation for the seizure of our industrial assets in Siam."
-SIA_SocDem_1:0 "사회 민주주의 개혁"
-SIA_SocDem_2:0 "사회 민주주의 개혁"
-SIA_SocDem_3:0 "사회 민주주의 개혁"
-SIA_SocCon_1:0 "Prachathipat Reforms"
-SIA_SocCon_2:0 "Prachathipat Reforms"
-SIA_SocCon_3:0 "Prachathipat Reforms"
-SIA_Liberal_1:0 "Kijsangkhom Reforms"
-SIA_Liberal_2:0 "Kijsangkhom Reforms"
-SIA_Liberal_3:0 "Kijsangkhom Reforms"
+SIA_SocDem_1:0 "사회민주주의 개혁"
+SIA_SocDem_2:0 "사회민주주의 개혁"
+SIA_SocDem_3:0 "사회민주주의 개혁"
+SIA_SocCon_1:0 "사회행동 개혁"
+SIA_SocCon_2:0 "사회행동 개혁"
+SIA_SocCon_3:0 "사회행동 개혁"
+SIA_Liberal_1:0 "민주 개혁"
+SIA_Liberal_2:0 "민주 개혁"
+SIA_Liberal_3:0 "민주 개혁"
 SIA_MSN_idea:0 "현대 시암 국가"
 SIA_MSN_idea_desc:0 "The impact of the blood, sweat, and tears we have spent to revitalise Siam can be clearly seen throughout the nation."
 SIA_MSN_SocDem_idea:0 "현대 시암 국가"
@@ -169,30 +169,30 @@ SIA_totalist_party_TH:0 "타이 공산당"
 SIA_totalist_party_TH_long:0 "타이 공산당"
 SIA_radical_socialist_party:0 "노동당"
 SIA_radical_socialist_party_long:0 "노동당"
-SIA_syndicalist_party:0 "시암 생디칼리스트 당"
-SIA_syndicalist_party_long:0 "시암 생디칼리스트 당"
-SIA_syndicalist_party_TH:0 "타이 생디칼리스트 당"
-SIA_syndicalist_party_TH_long:0 "타이 생디칼리스트 당"
+SIA_syndicalist_party:0 "시암 생디칼리스트당"
+SIA_syndicalist_party_long:0 "시암 생디칼리스트당"
+SIA_syndicalist_party_TH:0 "타이 생디칼리스트당"
+SIA_syndicalist_party_TH_long:0 "타이 생디칼리스트당"
 SIA_social_democrat_party:0 "사회당"
 SIA_social_democrat_party_long:0 "사회당"
-SIA_social_liberal_party:0 "사회 행동당"
-SIA_social_liberal_party_long:0 "사회 행동당"
+SIA_social_liberal_party:0 "사회행동당"
+SIA_social_liberal_party_long:0 "사회행동당"
 SIA_market_liberal_party:0 "자유당"
 SIA_market_liberal_party_long:0 "자유당"
 SIA_social_conservative_party:0 "민주당"
 SIA_social_conservative_party_long:0 "민주당"
 SIA_authoritarian_democrat_party:0 "시암 최고 국가위원회"
 SIA_authoritarian_democrat_party_long:0 "시암 최고 국가위원회"
-SIA_authoritarian_democrat_party_reform:0 "인민 위원회"
-SIA_authoritarian_democrat_party_reform_long:0 "인민 위원회"
+SIA_authoritarian_democrat_party_reform:0 "인민위원회"
+SIA_authoritarian_democrat_party_reform_long:0 "인민위원회"
 SIA_authoritarian_democrat_party_khana_ratsadon:0 "인민당"
 SIA_authoritarian_democrat_party_khana_ratsadon_long:0 "인민당"
 SIA_paternal_autocrat_party:0 "보오라데트 세력"
 SIA_paternal_autocrat_party_long:0 "보오라데트 세력"
 SIA_paternal_autocrat_party_plaek:0 "자유 타이당"
 SIA_paternal_autocrat_party_plaek_long:0 "자유 타이당"
-SIA_paternal_autocrat_party_sarit:0 "사회 국민당"
-SIA_paternal_autocrat_party_sarit_long:0 "사회 국민당"
+SIA_paternal_autocrat_party_sarit:0 "사회국민당"
+SIA_paternal_autocrat_party_sarit_long:0 "사회국민당"
 SIA_national_populist_party:0 "자유 타이당"
 SIA_national_populist_party_long:0 "자유 타이당"
 
@@ -365,7 +365,7 @@ siamn.11.a:0 "이것은 시암 민중들에겐 커다란 도약이다!"
 
 ## Khana Ratsadon 1936 Election and subsequent Civil War ##
 
-siamn.12.t:0 " "국민 경제 계획 초안본"의 문제"
+siamn.12.t:0 ""국민 경제 계획 초안본"의 문제"
 siamn.12.d:0 "Today Luang Praditmanutham, Minister of State and a member of the People's Party, presented the draft of his "National Economic Development Plan" proposal to the National Assembly.\n\nKnown as the "Yellow Cover Dossier" the plan details the formation of a wellfare state, redistribution of land, state intervention in the private sector, and a system of subsidies for farmers.\n\nSome have compared the proposal to that of a syndicalism while others have agreed that the reforms will greatly improve the lives of the [SIA.GetAdjective] people.\n\nAll that remains is to see what his majesty has to say..."
 siamn.12.a:0 "국왕 전하께선 프리디 파놈용의 제안에 동의하셨다."
 siamn.12.b:0 "국왕 전하께서는 수수한 제안을 지지하신다.."
@@ -795,13 +795,13 @@ SIA_foreigninvestment:0 "Foreign Investments"
 SIA_twooceantradinghub:0 "Two-Ocean Trading Hub"
 
 ### Army Path ###
-SIA_royalsiamesearmy:0 "The [SIA.GetAdjective] Army"
+SIA_royalsiamesearmy:0 "[SIA.GetAdjective] 육군"
 SIA_royalsiamesearmy_desc:0 "First formed in 1874, as a response to new security threats brought in by the 1855 Bowing treaty (which opened us to international trade) - the army is the oldest and largest branch in the Siamese Armed Forces, fulfilling its role as the protector of our sovereignty."
-SIA_phibunsongkhramplan:0 "Phibunsongkhram's Reforms"
+SIA_phibunsongkhramplan:0 "피분송크람의 개혁"
 SIA_phibunsongkhramplan_desc:0 "[SIA.GetName] will adopt a doctrine based on the advice of Luang Phibunsongkhram. Being well known for his translation of a French Weltkrieg-era Field Artillery manual into Thai, he advocates for a centralized and well-equiped army with the usage of artillery being the main focus."
-SIA_seriroengritplan:0 "Seriroengrit's Reforms"
+SIA_seriroengritplan:0 "Seriroengrit의 개혁"
 SIA_seriroengritplan_desc:0 "[SIA.GetName] will follow the advice of Luang Seriroengrit, the leader of the Phayap Army who fought off numerous cross-border raids from Burma post-British Revolution. His doctrine emphasizes the usage of a decentralized regional army command, composed mainly by militias. Similar to that of Switzerland."
-SIA_phrayaphahonplan:0 "Phahonpolpayuhasena's Plan"
+SIA_phrayaphahonplan:0 "Phahonpolpayuhasena의 계획"
 SIA_phrayaphahonplan_desc:0 "[SIA.GetName] will adopt the proposals of Phraya Phahonpolpayuhasena. Studies at the Hauptkadettenanstalt during his younger years and experience of the German General Staff's work during the Weltkrieg have convinced him that proper planning is the key to victoy."
 SIA_jungletraining:0 "Jungle Combat Training"
 SIA_jungletraining_desc:0 "The harsh jungles of Indochina have long been a graveyard of empires, friend and foe alike. We must train all our troops to better operate in such hostile conditions."
@@ -815,7 +815,7 @@ SIA_artilleryresearchdivision:0 "Artillery Research Divisions"
 SIA_artilleryresearchdivision_desc:0 "Lead by Luang Wichitsongkhram, the new artillery research division is responsible for designing our own native artillery to reduce the demand for imported artillery in the army."
 SIA_defensetechnologyinstitute:0 "Defence Technology Institute"
 SIA_defensetechnologyinstitute_desc:0 "Satisfied with their most recent project; the old artillery research division will now be expanded and put in charge of other fields of military research, ensuring our armed forces at the cutting edge."
-SIA_salacheepphurchard:0 "For the Motherland!"
+SIA_salacheepphurchard:0 "모국을 위하여!"
 SIA_salacheepphurchard_desc:0 "Our ancestors have shed so much blood on this piece of land now called Siam, we shall make sure that their sacrifices aren't in vain."
 SIA_expandsupportcapacity:0 "Expand Support Team Capacity"
 SIA_expandsupportcapacity_desc:0 "'Taharn Chang' (Combat Engineers) and 'Taharn Khonsong' (Logistics Teams) are what kept our army working for so long during the Weltkrieg, let's give them better tools so that they can fulfill their role in a modern war."
@@ -839,7 +839,7 @@ SIA_nationalreserveact:0 "The National Reserve Act"
 SIA_nationalreserveact_desc:0 "”...All men aged between 18-45 with Siamese citizenship are required to be registered at their local barracks and finish their basic trainig course at least once, not doing so can result in being court marshalled by the Army...”\n\n-excerpt from 2484 B.E. the National Reserve Bill"
 
 ### Navy Path ###
-SIA_royalsiamesenavy:0 "Royal Siamese Navy"
+SIA_royalsiamesenavy:0 "왕립 시암 해군"
 SIA_royalsiamesenavy_desc:0 "Established in 1887, the RSN has similar organisational structures to the United States Navy, since it is composed of both the naval fleet and the Royal Siamese Marine Corps. It was also the second Asian nation to acquire submarines, after Japan Japan."
 SIA_expandmarinescorps:0 "Expand the Navikkayothin Corps"
 SIA_expandmarinescorps_desc:0 "Although 'Taharn Ma-Rine' were first founded back in 1833, the unit served mostly as a royal honor guard throughout the 19th century. It wasn't until 1913 that the Siamese Marines were reorganized into the modern "Navy Amphibious Assault Group" who saw some action back in the Weltkrieg. Perhaps the marines can serve as yet another ace in the hole for the upcoming conflict?"
@@ -865,7 +865,7 @@ SIA_alargefleet:0 "Fleet in Being"
 SIA_alargefleet_desc:0 "Being surrounded by bigger and more heavily armed navy, Admiral Luang Kamolnavin wants us to get all the firepower we can get to knock the enemy battleships out of the fight and, if possible, sink them."
 
 ### Air Forces Path ###
-SIA_royalsiameseaircorps:0 "Royal Siamese Air Corps"
+SIA_royalsiameseaircorps:0 "왕립 시암 육군 항공대"
 SIA_royalsiameseaircorps_desc:0 "First founded in 1913 as the Siamese Flying Corps, our flyboys have helped us achieve numerous victories by assisting us from the sky. We will therefore once again rename the Royal Siamese Aeronautical Service to the Royal Siamese Air Corps."
 SIA_airportauthority:0 "Siamese Airport Authority"
 SIA_airportauthority_desc:0 "Construction of additional state-owned airports can help us kick-start our own national carrier airline and serve as airbases for our Air forces."
