--- a/Kaiserreich Korean Translation/localisation/KR_Socialist_Republic_of_Italy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Socialist_Republic_of_Italy_l_english.yml
@@ -906,15 +906,15 @@ socitaly.106.t:0 "로마 재즈 축제l"
 socitaly.106.d:0 "로마가 대시한번 이탈리아의 수도가 됨에 따라서, 재즈 축제가 이탈리아 전역의 다양한 음악 조합에 의해서 열리게 되었습니다. 재즈는 1904년부터 미국의 영향을 받은 현대 이탈리아 재즈는 1904년에 미국의 영향을 받아서 혁명 이전에도 국내에 있었죠. 이 축재에서 하이라이트를 가장 유명한 미국의 재즈 음악가 루이즈 암스트롱이 장식했습니다."
 socitaly.106.a:0 "새로운 로마에서 새로운 음악을 즐겨보자."
 
-socitaly.107.t:0 "Giro d'Italia를 다시 시작하다"
-socitaly.107.d:0 "이탈리아 통일과 함께, Giro d'Italia를 다시 시작 할 수 있게 되었습니다. Giro d'Italia는 1909년부터 시작된 자전거 경주였지만, 1914년 첫 번째 세계대전 이후 중단 되었죠. 그러나 지금 이탈리아는 새롭게 통일되면서 이 대회를 시작 할 수 있게 되었습니다. 이 경주에 참가하는 사람들은 북쪽 토리노부터 시작해서 남쪽의 나폴리와 바리를 거쳐서 밀란으로 다시 되돌아오는 코스를 거치게 될겁니다.."
+socitaly.107.t:0 "지로 디탈리아를 다시 시작하다"
+socitaly.107.d:0 "이탈리아 통일과 함께, 지로 디탈리아를 다시 시작 할 수 있게 되었습니다. 지로 디탈리아는 1909년부터 시작된 자전거 경주였지만, 1914년 첫 번째 세계대전 이후 중단 되었죠. 그러나 지금 이탈리아는 새롭게 통일되면서 이 대회를 시작 할 수 있게 되었습니다. 이 경주에 참가하는 사람들은 북쪽 토리노부터 시작해서 남쪽의 나폴리와 바리를 거쳐서 밀란으로 다시 되돌아오는 코스를 거치게 될겁니다.."
 socitaly.107.a:0 "경기를 시작하도록 하지."
 
-socitaly.108.t:0 "파우스트 코피가 Giro D'Italia에서 승리하다"
-socitaly.108.d:0 "파우스트 코피가 새로운 기록을 달성하며 Giro D'Italia에서 승리했습니다. 20살의 나이로 이 경주를 완수한 가장 어린 자전거 선수가 되었으며, 그의 성공적인 훈련 방식과 식단은 아마 다른 선수들에게 귀감이 될 것입니다."
+socitaly.108.t:0 "파우스트 코피가 지로 디탈리아에서 승리하다"
+socitaly.108.d:0 "파우스트 코피가 새로운 기록을 달성하며 지로 디탈리아에서 승리했습니다. 20살의 나이로 이 경주를 완수한 가장 어린 자전거 선수가 되었으며, 그의 성공적인 훈련 방식과 식단은 아마 다른 선수들에게 귀감이 될 것입니다."
 socitaly.108.a:0 "축하하오 코피 동무."
 
-socitaly.109.t:0 "스파르타쿠스가 상영되다S."
+socitaly.109.t:0 "스파르타쿠스가 상영되다."
 socitaly.109.d:0 "장편 서사 영화인 스파르타쿠스가 치네치타에서 개봉되었습니다. 고대 로마 제국에 저항한 노예의 지도자인 스파르타쿠스에 대해 다룬 이 영화는, 엄청난 비용을 들여서 제작되었습니다. 지노 세르비가 스파르타쿠스를 연기하고, 카르미네 갈로네가 감독했죠. 이 영화는 비평가와 대중들에게 많은 인기를 받고 있습니다."
 socitaly.109.a:0 "나도 스파르타쿠스다!"
 
