--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -410,7 +410,7 @@ uob.27.a:0 "브리타니아가 지배하노라!"
 uob.27.b:0 "사회주의 만세!"
 
 uob.28.t:0 "브리튼 연방이 아이슬랜드와 아조레스를 위협하다"
-uob.28.d:0 "리버풀의 해군 기지를 떠난 사회주의 해군은 아이슬랜드와 아조레스로 향했습니다. 이는 위력 행사이지만 무시되어서는 안됩니다. 이는 제국협정을 향한 직접적인 위협은 아니지만 많은 고위 공무직에서는 관심을 가지지 않는 것은 현명한 선택이 아니라 믿습니다. 가장 적절한 답은 우리의 대양함대를 보내는 것이지만 이는 연방이 수행할 결정적인 행동 이전에 추가적인 준비를 선호하는 많은 독일인들에게서 반대를 받고 있습니다."
+uob.28.d:0 "리버풀의 해군 기지를 떠난 사회주의 해군은 아이슬랜드와 아조레스로 향했습니다. 이는 위력 행사이지만 무시되어서는 안됩니다. 이는 제국 조약을 향한 직접적인 위협은 아니지만 많은 고위 공무직에서는 관심을 가지지 않는 것은 현명한 선택이 아니라 믿습니다. 가장 적절한 답은 우리의 대양함대를 보내는 것이지만 이는 연방이 수행할 결정적인 행동 이전에 추가적인 준비를 선호하는 많은 독일인들에게서 반대를 받고 있습니다."
 uob.28.a:0 "우리의 힘을 보여라"
 uob.28.b:0 "추가적 증강을 위해 자원을 소모해라"
 
@@ -1422,17 +1422,17 @@ ENG_radical_socialist_party:0 "자치주의"
 ENG_BLR_radical_socialist_party:0 "대중주의"
 ENG_radical_socialist_party_long:0 "노동조합총회 자치파"
 ENG_BLR_radical_socialist_party_long:0 "블레어의 인민주의파"
-ENG_social_democrat_party:0 "사회 민주주의"
-ENG_social_democrat_party_long:0 "사회 민주주의"
-ENG_social_liberal_party:0 "사회 진보주의"
-ENG_social_liberal_party_long:0 "사회 진보주의"
-ENG_market_liberal_party:0 "시장 자유주의"
-ENG_market_liberal_party_long:0 "시장 자유주의"
-ENG_social_conservative_party:0 "사회 보수주의"
-ENG_social_conservative_party_long:0 "사회 보수주의"
+ENG_social_democrat_party:0 "사회민주주의"
+ENG_social_democrat_party_long:0 "사회민주주의"
+ENG_social_liberal_party:0 "사회자유주의"
+ENG_social_liberal_party_long:0 "사회자유주의"
+ENG_market_liberal_party:0 "시장자유주의"
+ENG_market_liberal_party_long:0 "시장자유주의"
+ENG_social_conservative_party:0 "사회보수주의"
+ENG_social_conservative_party_long:0 "사회보수주의"
 ENG_authoritarian_democrat_party:0 "권위민주주의"
 ENG_authoritarian_democrat_party_long:0 "권위민주주의"
-ENG_paternal_autocrat_party:0 "조국 전제군주주의"
-ENG_paternal_autocrat_party_long:0 "조국 전제군주주의"
-ENG_national_populist_party:0 "민족 대중주의"
-ENG_national_populist_party_long:0 "민족 대중주의"
+ENG_paternal_autocrat_party:0 "세습전제주의"
+ENG_paternal_autocrat_party_long:0 "세습전제주의"
+ENG_national_populist_party:0 "민족대중주의"
+ENG_national_populist_party_long:0 "민족대중주의"
