--- a/Kaiserreich Korean Translation/localisation/KR_Vietnam_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Vietnam_l_english.yml
@@ -21,10 +21,10 @@ VIE_paternal_autocrat_party:0 "왕당파"
 VIE_paternal_autocrat_party_long:0 "왕당파(Dang Bao Hoang)"
 VIE_national_populist_party:0 "까오 다이"
 VIE_national_populist_party_long:0 "계시와 구원의 제3시대의 위대한 종교(Dai Dao Tam Ky Pho Do)"
-VIE_vietnam_restoration_society:0 "Vietnam Restoration League"
-VIE_vietnam_restoration_society_long:0 "Vietnam Restoration League(Viet Nam Quang Phuc Hoi)"
-VIE_Can_Lao:0 "Can Lao"
-VIE_Can_Lao_long:0 "Personalist Labor Revolutionary Party(Can Lao Nhan Vi Cach Mang Dang)"
+VIE_vietnam_restoration_society:0 "베트남 복원 연맹"
+VIE_vietnam_restoration_society_long:0 "베트남 복원 연맹(Viet Nam Quang Phuc Hoi)"
+VIE_Can_Lao:0 "칸 라오"
+VIE_Can_Lao_long:0 "근로인격혁명당(Can Lao Nhan Vi Cach Mang Dang)"
 
 ### Ideas ###
 VIE_Rural_Insurgency_idea:0 "Rural Insurgency"
