--- a/Kaiserreich Korean Translation/localisation/KR_Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Wallonia_l_english.yml
@@ -13,10 +13,10 @@ WLL_syndicalist_party:0 "벨기에 노동당"
 WLL_syndicalist_party_long:0 "벨기에 노동당"
 WLL_totalist_party:0 "발로니에 전체주의당"
 WLL_totalist_party_long:0 "발로니에 전체주의당"
-WLL_national_populist_party:0 "REX"
-WLL_national_populist_party_long:0 "REX"
-WLL_paternal_autocrat_party:0 "REX"
-WLL_paternal_autocrat_party_long:0 "REX"
+WLL_national_populist_party:0 "렉스"
+WLL_national_populist_party_long:0 "렉스"
+WLL_paternal_autocrat_party:0 "렉스"
+WLL_paternal_autocrat_party_long:0 "렉스"
 WLL_authoritarian_democrat_party_long:0 "왕당파"
 WLL_authoritarian_democrat_party:0 "국왕 지지파"
 
