--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -475,8 +475,8 @@ GER_kaiserbund_desc:0 "계속되는 경기 침체를 고려하여, 국가 의회
 GER_security_2:0 "프랑스 조직 금지"
 GER_security_2_desc:0 "과거 프랑스가 통치하였으나 지금은 독일의 서쪽 일부가 된 지역은 오랫동안 제멋대로 행동해왔습니다. 프랑스 민족주의가 주민들 사이에 만연하고 있으며, 프랑스 문화와 정치 단체 또한 많이 존재합니다. 이들을 금지하여 프랑스 민족주의를 억압할 수 있겠으나, 극단화를 초래할 것입니다. 어느 쪽이든 프랑스인들은 기뻐하지 않을 것입니다."
 
-GER_security_3:0 "알자스-로트링겐 기동 훈련"
-GER_security_3_desc:0 "비열한 파리놈들은 우리 통치를 거역하기 충분할만큼 뻔뻔하며, 로트링겐의 반란분자를 지원하고 있습니다! 황제 폐하 그리고 군 수뇌부와의 긴 토의 이후, 재상은 예비 병력의 부분 동원에 승인했으며, 엘자스-로트링겐에서의 대규모 군사 훈련을 고려하고 있습니다. 이 훈련에는 공군과 장갑 파견대 그리고 제국 조약 회원국의 관전 무관이 참가할 것입니다."
+GER_security_3:0 "엘자스-로트링엔 기동 훈련"
+GER_security_3_desc:0 "비열한 파리놈들은 우리 통치를 거역하기 충분할만큼 뻔뻔하며, 로렌의 반란분자를 지원하고 있습니다! 황제 폐하 그리고 군 수뇌부와의 긴 토의 이후, 재상은 예비 병력의 부분 동원에 승인했으며, 알자스-로렌에서의 대규모 군사 훈련을 고려하고 있습니다. 이 훈련에는 공군과 장갑 파견대 그리고 제국 조약 회원국의 관전 무관이 참가할 것입니다."
 
 GER_security_4:0 "인터내셔널을 파괴하라"
 GER_security_4_desc:0 "세계에서 평화와 안정에 가장 큰 위협은 단연코 생디칼리스트들입니다. 그리고 그들의 총본산이 바로 인터내셔널입니다. 우리 군 최고 사령부는 수년에 걸쳐 유럽의 질서를 되찾기 위해 다시금 파리로 진군하기를 꿈꿔왔습니다. 지금보다 쳐부수기에 적합한 시기는 없습니다. 빨갱이들이 두려워하게 두십시오, 제국 조약이 찾아갈테니까요!"
@@ -620,7 +620,7 @@ GER_krupp_focus:0 "크루프 AG 독점"
 GER_krupp_focus_desc:0 "크루프 가문은 약 400년이 된 독일의 산업가 가문으로, 30년 전쟁 때부터 독일의 군수 산업을 떠받쳐왔습니다! 그들의 재능은 세계 대전이 새로 벌어지면 필요할 것이기 때문에, 우리는 이제 그들을 다시 채용해야 합니다."
 
 GER_rearmament:0 "군비 확장"
-GER_rearmament_desc:0 "세계는 점점 더 위험해지고 있습니다. 프랑스의 생디칼리스트들은 엘자스-로트링겐을 탐욕스럽게 바라보고 있으며, 러시아는 불안정한 상태에 빠지고 있고, 일본은 우리의 후방을 치고 싱가포르를 가져갈 적절한 때를 기다리고 있습니다. 재무장에 집중하는 것은 인기가 없을 것입니다. 하지만 이것은 우리가 양지 바른 곳을 지키고 싶다면 당장 필요한 것입니다."
+GER_rearmament_desc:0 "세계는 점점 더 위험해지고 있습니다. 프랑스의 생디칼리스트들은 엘자스-로트링엔을 탐욕스럽게 바라보고 있으며, 러시아는 불안정한 상태에 빠지고 있고, 일본은 우리의 후방을 치고 싱가포르를 가져갈 적절한 때를 기다리고 있습니다. 재무장에 집중하는 것은 인기가 없을 것입니다. 하지만 이것은 우리가 양지 바른 곳을 지키고 싶다면 당장 필요한 것입니다."
 
 GER_artillery_research:0 "포병 연구"
 GER_artillery_research_desc:0 "독일 육군은 경 지원 화기 운용에 있어서 전통적으로 낙후되어 왔습니다. '패리스 건'과 같은 거대하고 다루기 힘드며 비효율적인 명품을 만들어내긴 했습니다만, 이제는 좀 더 실용적이고 효율적인 대안에 투자해야 할 때입니다."
