--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -171,7 +171,7 @@ GER_unlocks_junkers:0 "융커스 사를 개선합니다."
 GER_ig_farben_unlock:0 "§GIG-파르펜을 개선합니다.§!"
 GER_krupp_steel_unlock:0 "§G크루프를 개선합니다.\n§!"
 GER_siemens_unlock:0 "§G지멘스를 개선합니다.\n§!"
-GER_hahn_meitner_unlock:0 "한 & 마이트니를 개선할 것입니다.\n\n"
+GER_hahn_meitner_unlock:0 "한 & 마이트너를 개선할 것입니다.\n\n"
 DEN_ENG_ultimatum:0 "최후 통첩을 보내다"
 DEN_abandon:0 "방치된 갈등"
 DEN_ENG_back_down:0 "정전"
@@ -629,7 +629,7 @@ GER_doctrine_armor:0 "기갑 돌파"
 GER_doctrine_armor_desc:0 "구데리안과 만슈타인의 새로운 교리가 보여 주는 또 다른 중요한 요점은 소위 '중심 돌파'라는 것입니다. 이들은 기갑 전력에 충분한 지원 병력이 더해진 기동 기갑부대는 어떤 공격도 승리로 이끌 수 있다고 믿고 있습니다. 이제 그들은 이 교리를 위해 새로운 전차를 필요로 합니다."
 
 GER_hahn_meitner:0 "한 & 마이트너 지원"
-GER_hahn_meitner_desc:0 "한과 프로일라인 마이트너는 매우 뛰어난 물리학자입니다. 한은 심지어 생디칼리즘 세계의 학술지에 정기적으로 글을 쓰며, 마이트너는 카이저 연구소의 소장입니다. 이 둘이 아주 강력한 무기를 만드는 데에 도움을 줄 수 있다고 믿습니다. 그보다 더 강력한 무기에 대해서도 말이죠."
+GER_hahn_meitner_desc:0 "한과 프로일라인 마이트너는 매우 뛰어난 물리학자입니다. 한은 심지어 생디칼리즘 세계의 학술지에 정기적으로 글을 쓰며, 마이트너는 카이저 빌헬름 학회의 소장입니다! 이 둘이 아주 강력한 무기를 만드는 데에 도움을 줄 수 있다고 믿습니다. 그보다 더 강력한 무기에 대해서도 말이죠."
 
 GER_rocket:0 "폰 브라운 지원"
 GER_rocket_desc:0 "폰 브라운은 '로켓' 분야의 유명한 선각자이며 세계적으로 인정받는 과학자입니다. 그는 후원을 해준다면 그 대가로 새로운 무기 설계를 넘기겠다고 제안했습니다. 이를 신중하게 고려해야 합니다."
