--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -1174,57 +1174,57 @@ uobflavour.19.b:0 "결국은 생디칼리즘 선전물일 뿐이다."
 uobflavour.21.t:0 "새 서기장"
 uobflavour.21.d:0 "최근 서기장이 서거했으니 새로운 이를 임명할 필요가 있습니다."
 uobflavour.21.a:0 "G.D.H. 콜이 블레어의 배후 공작을 이어나갈 것이다."
-uobflavour.21.b:0 "Phil Piratin! It is time for a more liberal 최대주의자 voice."
-uobflavour.21.c:0 "Nye Bevan will build a worker's paradise in Blair's honour."
-uobflavour.21.e:0 "Harry Pollitt will keep the Unions happy."
-uobflavour.21.f:0 "Barbara Castle will continue the behind the scenes work."
+uobflavour.21.b:0 "필 피라틴! 이제는 좀 더 진보적인 최대주의자가 목소리를 낼 때이다."
+uobflavour.21.c:0 "나이 베번이 블레어의 영광 아래에서 노동자의 천국을 건설할 것이다."
+uobflavour.21.e:0 "해리 폴리트가 연방을 행복하게 할 것이다."
+uobflavour.21.f:0 "바바라 캐슬이 무대 뒤 작업을 계속할 것이다."
 #uobflavour.21.f:0 "Denis Healey will get the most out of Britain"
-uobflavour.21.g:0 "Tony Benn, up and coming son of William, gets his chance."
-uobflavour.21.h:0 "Christabel Pankhurst! It's time for more women in the top jobs."
+uobflavour.21.g:0 "곧 윌리엄의 아들이 될 토니 벤이 기회를 얻는다."
+uobflavour.21.h:0 "크리스타벨 팽크허스트! 고위직에 더 많은 여성들이 있어야 할 때이다."
 
 uobflavour.22.t:0 "서기장 맥스톤이 서거하다"
-uobflavour.22.d:0 "The General Secretary, James Maxton, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
-uobflavour.22.a:0 "Memento mori."
+uobflavour.22.d:0 "제임스 맥스톤 서기장이 평생 동안 브리튼 노동자들을 위해 봉사한 후 세상을 떠났습니다. 브리튼 연방은 이 헤아릴 수 없는 손실에 슬퍼하고 있습니다."
+uobflavour.22.a:0 "죽음을 기억하라."
 
 uobflavour.23.t:0 "서기장 블레어가 서거하다"
-uobflavour.23.d:0 "The General Secretary, Eric Blair, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
-uobflavour.23.a:0 "Memento mori."
+uobflavour.23.d:0 "에릭 블레어 서기장이 평생 동안 브리튼 노동자들을 위해 봉사한 후 세상을 떠났습니다. 브리튼 연방은 이 헤아릴 수 없는 손실에 슬퍼하고 있습니다."
+uobflavour.23.a:0 "죽음을 기억하라."
 
 uobflavour.24.t:0 "서기장 콜이 서거하다"
-uobflavour.24.d:0 "The General Secretary, G.D.H. Cole, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
-uobflavour.24.a:0 "Memento mori."
+uobflavour.24.d:0 "G.D.H. 콜 서기장이 평생 동안 브리튼 노동자들을 위해 봉사한 후 세상을 떠났습니다. 브리튼 연방은 이 헤아릴 수 없는 손실에 슬퍼하고 있습니다."
+uobflavour.24.a:0 "죽음을 기억하라."
 
 uobflavour.25.t:0 "서기장 베번이 서거하다"
-uobflavour.25.d:0 "The General Secretary, Nye Bevan, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
-uobflavour.25.a:0 "Memento mori."
+uobflavour.25.d:0 "나이 베번 서기장이 평생 동안 브리튼 노동자들을 위해 봉사한 후 세상을 떠났습니다. 브리튼 연방은 이 헤아릴 수 없는 손실에 슬퍼하고 있습니다."
+uobflavour.25.a:0 "죽음을 기억하라."
 
 uobflavour.26.t:0 "서기장 팽크허스트가 서거하다"
-uobflavour.26.d:0 "The General Secretary, Christabel Pankhurst, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
-uobflavour.26.a:0 "Memento mori."
+uobflavour.26.d:0 "크리스타벨 팽크허스트 서기장이 평생 동안 브리튼 노동자들을 위해 봉사한 후 세상을 떠났습니다. 브리튼 연방은 이 헤아릴 수 없는 손실에 슬퍼하고 있습니다."
+uobflavour.26.a:0 "죽음을 기억하라."
 
 uobflavour.27.t:0 "서기장 만이 서거하다"
-uobflavour.27.d:0 "The General Secretary, Tom Mann, has died after a lifetime serving the workers of Britain. The Union of Britain mourns this immeasurable loss."
-uobflavour.27.a:0 "Memento mori."
+uobflavour.27.d:0 "톰 만 서기장이 평생 동안 브리튼 노동자들을 위해 봉사한 후 세상을 떠났습니다. 브리튼 연방은 이 헤아릴 수 없는 손실에 슬퍼하고 있습니다."
+uobflavour.27.a:0 "죽음을 기억하라."
 
 uobflavour.28.t:0 "의장 만이 서거하다"
-uobflavour.28.d:0 "Britain's ever-faithful servant and current Chairman of the Congress of Trade Unions Tom Mann has died in his sleep. A Revolutionary of the old guard, Mann spent his life serving the people of Britain and will be sorely missed. On a wave of sympathy with Mann's own Federationist faction, Arthur Horner has been elected to replace him."
-uobflavour.28.a:0 "You will be missed, comrade."
+uobflavour.28.d:0 "브리튼의 믿음직한 하인이자 현 노동조합총회 의장인 톰 만이 잠든 사이에 세상을 떠났습니다. 보수의 혁명가 만은 브리튼 인민을 위해 일하며 일생을 바쳤으며 그가 몹시 그리울 것입니다. 만의 연방파에 대한 지지의 물결 속에서 아서 호너가 그를 대신하기 위해 선출되었습니다."
+uobflavour.28.a:0 "그리울 거요, 동지."
 
 uobflavour.29.t:0 "어나이린 베번이 서거하다"
-uobflavour.29.d:0 "The well known Welsh labour activist Aneurin Bevan has died after a lifetime serving the workers of Britain. The Union of Britain mourn this immeasurable loss."
-uobflavour.29.a:0 "Memento mori."
+uobflavour.29.d:0 "유명한 웨일즈 노동운동가인 어나이린 베번이 평생 동안 브리튼 노동자들을 위해 봉사한 후 세상을 떠났습니다. 브리튼 연방은 이 헤아릴 수 없는 손실에 슬퍼하고 있습니다."
+uobflavour.29.a:0 "죽음을 기억하라."
 
 uobflavour.30.t:0 "애니 케니가 서거하다"
-uobflavour.30.d:0 "The famous suffragette Annie Kenney has died after a lifetime serving the workers of Britain. The Union of Britain mourn this immeasurable loss."
-uobflavour.30.a:0 "Memento mori."
+uobflavour.30.d:0 "유명한 여성 참정권 운동가인 애니 케니가 평생 동안 브리튼 노동자들을 위해 봉사한 후 세상을 떠났습니다. 브리튼 연방은 이 헤아릴 수 없는 손실에 슬퍼하고 있습니다."
+uobflavour.30.a:0 "죽음을 기억하라."
 
 uobflavour.31.t:0 "알란 브루크가 서거하다"
-uobflavour.31.d:0 "The renowned Commander Alan Brooke has died after a lifetime serving the workers of Britain. The Union of Britain mourn this immeasurable loss."
-uobflavour.31.a:0 "Memento mori."
+uobflavour.31.d:0 "유명한 장군인 알란 브루크가 평생 동안 브리튼 노동자들을 위해 봉사한 후 세상을 떠났습니다. 브리튼 연방은 이 헤아릴 수 없는 손실에 슬퍼하고 있습니다."
+uobflavour.31.a:0 "죽음을 기억하라."
 
-uobflavour.32.t:0 "Andrew Cunningham Passes Away"
-uobflavour.32.d:0 "The famous admiral Andrew Cunningham has died after a lifetime serving the workers of Britain. The Union of Britain mourn this immeasurable loss."
-uobflavour.32.a:0 "Memento mori."
+uobflavour.32.t:0 "앤드류 커닝햄이 세상을 떠나다"
+uobflavour.32.d:0 "유명한 제독인 앤드류 커닝햄이 평생 동안 브리튼 노동자들을 위해 봉사한 후 세상을 떠났습니다. 브리튼 연방은 이 헤아릴 수 없는 손실에 슬퍼하고 있습니다."
+uobflavour.32.a:0 "죽음을 기억하라."
 
 uobflavour.33.t:0 "A Dinner Party With a Twist"
 uobflavour.33.d:0 "After the recent developments in Ireland the British ambassador in Dublin has invited his Canadian counterpart and his attachés to a dinner party in order to finally alleviate the tension - or at least that's what the Canadian delegation thought. Instead, they found themselves in a Dublin gin joint being served grumpy stew. As they finally left the embarrassing meeting they had to parade through a street filled with Irish socialists cheering on the British delegation. With this spiteful parting gesture however the British campaign against Ireland seems to have come to an end."
@@ -1240,27 +1240,27 @@ uobflavour.34.c:0 "I'm sorry, what?"
 
 uobflavour.35.t:0 "존 맥클레인 호가 폭발하다!"
 uobflavour.35.d:0 "The John Maclean, named after the first president of the Union of Britain, was the largest airship ever built. She was constructed in 1935 as a propaganda tool, intended to show the world the achievements of the Union of Britain. In 1936, she made her maiden voyage, and soon started making regular traffic to Paris. Today, as she was about to dock at a Paris airfield, she burst into flames and crashed to the ground. 35 people out of 97 (plus one of the ground crew) died."
-uobflavour.35.a:0 "A tragedy!"
+uobflavour.35.a:0 "비극이군!"
 
-uobflavour.36.t:0 "모슬리 동지가 회의를 원하다"
-uobflavour.36.d:0 "Comrade Mosley of the 최대주의자 faction has invited Georges Valois of the French Sorelians, Lavrenti Beria of the former Bolsheviks in Georgia and Benito Mussolini of the Italian National-Syndicalists to Birmingham to compile a manifesto stating their joint aims for a new kind of Socialism called 'Totalism.' Chairman Snowden's 연방주의파 should keep an eye on this development."
-uobflavour.36.a:0 "Worrying, to say the least."
+uobflavour.36.t:0 "모즐리 동지가 회의를 원하다"
+uobflavour.36.d:0 "최대주의 파벌의 모즐리 동무가 '전체주의'라고 불리는 새로운 종류의 사회주의를 위한 공동 목표를 적은 성명서를 작성하기 위해 프랑스 소렐주의의 조르주 발루아와 조지아의 전 볼셰비키인 라브렌티 베리야, 이탈리아 국가생디칼리즘의 베니토 무솔리니를 버밍엄으로 초대하였습니다. 스노든 서기장의 연방주의파는 이 움직임을 지켜봐야합니다."
+uobflavour.36.a:0 "아무리 말해도 걱정이군."
 
-uobflavour.37.t:0 "모슬리가 무솔리니와 얘기하기를 원하다"
-uobflavour.37.d:0 "Oswald Mosley of the Union of Britain has invited the Chairman of the National-Syndicalists, Benito Mussolini, to Birmingham to discuss the common ground between their ideologies. Mussolini has thanked him for the invite and set off in the name of internationalism."
-uobflavour.37.a:0 "Off you go, Benito!"
+uobflavour.37.t:0 "모즐리가 무솔리니와 얘기하기를 원하다"
+uobflavour.37.d:0 "브리튼 연방의 오즈왈드 모즐리가 서로의 이념 간의 공통점을 논하기 위해 국가생디칼리즘의 위원장인 베니토 무솔리니를 버밍엄으로 초대하였습니다. 무솔리니는 초대에 감사하며 국제주의의 이름으로 출발했습니다."
+uobflavour.37.a:0 "가 보시오, 무솔리니!"
 
-uobflavour.38.t:0 "모슬리가 발루아와 얘기하기를 원하다" #begründen
-uobflavour.38.d:0 "Oswald Mosley of the Union of Britain has invited the leader of the Sorelians, Georges Valois, to Birmingham to discuss the common ground between their ideologies. Valois has thanked him for the invite and set off in the name of internationalism, bringing with him as guests the Hungarian exiles Tibor Szamuely and Mátyás Rákosi, whose views are also very much in line with Mosley's and Mussolini's."
-uobflavour.38.a:0 "Have a safe flight, comrades!"
+uobflavour.38.t:0 "모즐리가 발루아와 얘기하기를 원하다" #begründen
+uobflavour.38.d:0 "브리튼 연방의 오즈왈드 모즐리가 서로의 이념 간의 공통점을 논하기 위해 소렐주의의 지도자인 조르주 발루아를 버밍엄으로 초대하였습니다. 발루아는 초대에 감사하며 국제주의의 이름으로 출발하며, 모즐리와 무솔리니와 매우 비슷한 관점을 가진 헝가리계 망명자 사무엘리 티보르와 라코시 마차시를 손님으로 데려왔습니다."
+uobflavour.38.a:0 "안전한 비행되시오, 동무!"
 
 uobflavour.39.t:0 "사무엘리 티보르와 라코시 마차시가 문제를 일으키다"
-uobflavour.39.d:0 "Oswald Mosley of the Union of Britain has called a meeting between his French and Italian counterparts to discuss similarities in their shared ideology. Our old leftist foes Tibor Szamuely and Mátyás Rákosi, who live in exile in Paris, have also been granted permission to attend with the French party."
-uobflavour.39.a:0 "Let's hope they don't get any ideas..."
+uobflavour.39.d:0 "브리튼 연방의 오즈왈드 모즐리는 발루아와 무솔리니와의 회담을 통해 그들의 공동 이념의 유사성을 논의했습니다. 옛 좌파 적수인 사무엘리 티보르와 파리에 망명해 있는 라코시 마차시 또한 프랑스쪽 단체와 함께 참석하도록 허가를 받았습니다."
+uobflavour.39.a:0 "그들이 어떤 아이디어도 얻지 못하기를 바라자..."
 
-uobflavour.40.t:0 "Beria Flies to Birmingham"
-uobflavour.40.d:0 "Oswald Mosley of the Union of Britain has invited prominent cabinet member Beria to Birmingham to discuss the common ground between their ideologies. Beria has thanked him for the invite and set off in the name of internationalism."
-uobflavour.40.a:0 "Have a safe flight, comrade!"
+uobflavour.40.t:0 "베리야가 버밍엄으로 가다"
+uobflavour.40.d:0 "브리튼 연방의 오즈왈드 모즐리가 서로의 이념 간의 공통점을 논하기 위해 소렐주의의 지도자인 조르주 발루아를 버밍엄으로 초대하였습니다. 발루아는 초대에 감사하며 국제주의의 이름으로 출발했습니다."
+uobflavour.40.a:0 "안전한 비행되시오, 동무!"
 
 uobflavour.41.t:0 "전체주의 선언"
 uobflavour.41.d:0 "무솔리니, 발루아, 베리야와 다른 관심있어하는 단체들이 그들의 공통점을 논의하기 위해 오늘 버밍엄에 도착했습니다. 최대주의, 소렐주의, 그리고 국가생디칼리즘이 모두 사회주의 투쟁에서 국가의 우월성과 국가에서 국가 정체성의 역할, 그리고 사회주의를 지키고 발전시키는데 강력한 중앙 권력이 필요하다는 것을 기본 원칙으로 모두 공유한다고 합의되었습니다. 이 선언은 또한 사회주의 국가가 인간 발전의 마지막 단계이며 민주주의는 사회주의를 성취하기 위해 필요하지 않다고 주장했습니다. 다른 사회주의 파벌들은 이러한 발언들을 '전체주의' 또는 전체주의적 사회주의라 부르면서 많은 비판을 가했습니다. 모즐리는 성명서에 그 이름을 추가하며 열렬히 받아들였고, 이를 사회주의에 대한 완전한 헌신으로 돌렸습니다."
@@ -1389,7 +1389,7 @@ ENG_hague_fail_extra2:0 "헤이그 회의의 참사"
 ENG_total_war_tp:0 "총력전."
 ENG_conscript_vessels_tp:0 "§GConscript civilian vessels for Light Cruiser Service.§!"
 ENG_fortress_britain_tp:0 "§G벙커가 남부와 동부 해안을 무너지지 않도록 만들 것입니다.§!"
-ENG_merge_tp:0 "§GOswald Mosley will become General Secretary and Grand Protector of the Union of Britain.\n§!"
+ENG_merge_tp:0 "§G오즈왈드 모즐리가 브리튼 연방의 서기장이자 대호국경이 될 것입니다.\n§!"
 ENG_tuc_complete_focus_tp:0 "§Y1936년 노동 조합 총회가 끝남\n§!"
 ENG_internal_complete_focus_tp:0 "§Y브리튼 연방의 내부 정책이 결정됨\n§!"
 ENG_military_complete_focus_tp:0 "§Y브리튼 연방의 군사 정책이 결정됨\n§!"
