--- a/Kaiserreich Korean Translation/localisation/core_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/core_l_english.yml
@@ -15,7 +15,7 @@ LOADING_MAP_SPRITES:0 "왕당파들을 비난하는 중"
 #"Loading sprites"
 LOAD_GFX_PDXMAP_SHADERS:0 "사슬을 끊어내는 중"
 #"Loading Map(Creating Shaders)..."
-LOAD_GFX_PDXMAP_TERRAIN:0 "젊은이의 양지를 찾는 중"
+LOAD_GFX_PDXMAP_TERRAIN:0 "해가 비치는 곳을 찾는 중"
 #"Loading Map(Creating Terrain)..."
 LOAD_GFX_PDXMAP_BORDERS:0 "몽골 제국을 복원하는 중"
 #"Loading Map(Creating Borders)..."
@@ -35,15 +35,15 @@ LOADING_MAIN_MENU:0 "죽어가는 제국을 지탱하는 중"
 #"Loading main menu"
 PRECALC_NAVAL_DIST:0 "상하이에서 밀수하는 중"
 #"Precalculating Naval Distances"
-EXITING_TO_FRONTEND:0 "나폴레옹 왕가를 복원하는 중"
+EXITING_TO_FRONTEND:0 "나폴레옹 황가를 복원하는 중"
 #"Returning to main menu"
-LOAD_INIT:0 "제국 해군을 전개시키는 중"
+LOAD_INIT:0 "황제 해군을 전개시키는 중"
 #"Initialising Game..."
 LOAD_FLAGS:0 "미국의 민주주의를 구원하는 중"
 #"Creating Flags"
-PROC_FLAGS:0 "중화 제국을 재건설하는 중"
+PROC_FLAGS:0 "중화 제국을 재건하는 중"
 #"Processing Flags"
-INIT_MAP_LOGIC:0 "아프리카를 탈출하는 중"
+INIT_MAP_LOGIC:0 "아프리카로 탈출하는 중"
 #"Initialising map logic"
 INIT_GAMESTATE:0 "부상병을 치료하는 중"
 #"Initialising game"
