--- a/Kaiserreich Korean Translation/localisation/KR_Ethiopia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ethiopia_l_english.yml
@@ -7,18 +7,18 @@ ETH_paternal_autocrat_party:0 "YK"
 ETH_paternal_autocrat_party_long:0 "Yemeka'ānichi Kawinisili"
 ETH_authoritarian_democrat_party:0 "YTT"
 ETH_authoritarian_democrat_party_long:0 "Yeselomoni Tamanyi Tamanyochi"
-ETH_social_conservative_party:0 "DL"
-ETH_social_conservative_party_long:0 "Dīmokirasīyawī Līgi"
-ETH_market_liberal_party:0 "YYDH"
-ETH_market_liberal_party_long:0 "Yetebaberuti Ye'ītiyop'iya Dēmokirasīyawī Hayilochi"
-ETH_social_liberal_party:0 "KLIL"
-ETH_social_liberal_party_long:0 "K'inijiti Le'ānidineti Ina Ledēmokirasī"
-ETH_social_democrat_party:0 "YHADIG"
-ETH_social_democrat_party_long:0 "Ye'ītiyop'iya Ḥizibochi Abiyotawī Dīmokirasīyawī Ginibari"
-ETH_radical_socialist_party_long:0 "Ye Ityopia Serategnoch Parti"
-ETH_radical_socialist_party:0 "YISP"
-ETH_syndicalist_party:0 "MEMN"
-ETH_syndicalist_party_long:0 "Mela Ethiopia Mahiberati Niqinaqē"
+ETH_social_conservative_party:0 "민주 동맹"
+ETH_social_conservative_party_long:0 "민주 동맹"
+ETH_market_liberal_party:0 "통합 에티오피아 민주 세력"
+ETH_market_liberal_party_long:0 "통합 에티오피아 민주 세력"
+ETH_social_liberal_party:0 "통일과 민주주의 연합"
+ETH_social_liberal_party_long:0 "통일과 민주주의 연합"
+ETH_social_democrat_party:0 "에티오피아 인민 민주 전선"
+ETH_social_democrat_party_long:0 "에티오피아 인민 민주 전선"
+ETH_radical_socialist_party_long:0 "에티오피아 노동당"
+ETH_radical_socialist_party:0 "에티오피아 노동당"
+ETH_syndicalist_party:0 "전 에티오피아 생디칼리슴 운동"
+ETH_syndicalist_party_long:0 "전 에티오피아 생디칼리슴 운동"
 ETH_totalist_party:0 "YITMK"
 ETH_totalist_party_long:0 "Ye Ityopia T'ek'ilayi Mīnīsitiri Konifīsheri"
 
@@ -28,55 +28,55 @@ ETH_Sellasie_cons:0 "황제의 헌법이 승인되었습니다"
 ETH_Noble_cons:0 "귀족의 헌법이 승인되었습니다"
 
 ### Ideas ###
-ETH_Debt_idea_1:0 "과도한 부채"
-ETH_Debt_idea_2:0 "기념적인 부채"
-ETH_Debt_idea_3:0 "거대한 부채"
-ETH_Debt_idea_4:0 "다뤄지는 부채"
-ETH_Debt_idea_5:0 "관리가능한 부채"
-ETH_military_Focus:0 "군대 예산 증가"
-ETH_production_focus:0 "생산업 예산 증가"
-ETH_construction_focus:0 "건설 예산 증가"
-ETH_Tribal_Intergration:0 "부족의 통합"
-ETH_advisors_germany:0 "독일 군대 사절"
-ETH_Food:0 "식량 과잉"
-ETH_Scouts:0 "에티오피아 스카우트 협회"
-ETH_Slavery_idea:0 "노예제도"
-ETH_Land_Reform_idea:0 "토지 수입"
-ETH_Aristocratic_Army:0 "귀족 사병"
-ETH_Speech_Freedom:0 "연설의 자유"
-ETH_Ethiopian_Welfare:0 "에티오피아 복지"
+ETH_Debt_idea_1:0 "주체 불가능한 채무"
+ETH_Debt_idea_2:0 "기록적인 채무"
+ETH_Debt_idea_3:0 "막대한 채무"
+ETH_Debt_idea_4:0 "조정된 채무"
+ETH_Debt_idea_5:0 "처리 가능한 채무"
+ETH_military_Focus:0 "증가된 군사 예산"
+ETH_production_focus:0 "증가된 생산 예산"
+ETH_construction_focus:0 "증가된 건설 예산"
+ETH_Tribal_Intergration:0 "부족 통합"
+ETH_advisors_germany:0 "독일인 군사 고문들"
+ETH_Food:0 "여분의 식량"
+ETH_Scouts:0 "에티오피아 스카우트단"
+ETH_Slavery_idea:0 "노예제"
+ETH_Land_Reform_idea:0 "토지 수익"
+ETH_Aristocratic_Army:0 "귀족들의 군대"
+ETH_Speech_Freedom:0 "표현의 자유"
+ETH_Ethiopian_Welfare:0 "에티오피아의 복지"
 ETH_Lion_of_Judah_idea:0 "사자의 제국"
-ETH_Imperial_Inspiration:0 "제국의 영감"
-ETH_Working_Natives:0 "일하는 부족"
-ETH_Trained_Pilots:0 "훈련된 파일럿"
-ETH_Anti_Imp:0 "반 제국주의 정신"
-ETH_Ethiopian_Guns_idea:0 "에티오피아 화기"
-ETH_Levy_Army:0 "과세군"
+ETH_Imperial_Inspiration:0 "제국의 고무자"
+ETH_Working_Natives:0 "일하는 부족들"
+ETH_Trained_Pilots:0 "훈련된 조종사들"
+ETH_Anti_Imp:0 "반제국주의 정신"
+ETH_Ethiopian_Guns_idea:0 "에티오피아산 총기"
+ETH_Levy_Army:0 "소집군"
 
-ETH_Debt_idea_1_desc:0 "Our debt has reached a critical level and is a crippling burden on the shoulders of the state. People have begun to call the independence of Ethiopia into question because of how much our debt has tied us down."
-ETH_Debt_idea_2_desc:0 "Despite our large amount of debt, which is preventing us from undertaking large scale projects, we have managed to lessen the burden it has had on the state."
-ETH_Debt_idea_3_desc:0 "Despite our vast debt, which has prevented us from enacting several measures, we have managed to substantially decrease it due to debt management efforts."
-ETH_Debt_idea_4_desc:0 "Despite remaining at large, our debt is fairly manageable and no longer as limiting."
-ETH_Debt_idea_5_desc:0 "The status of our debt has been reduced to that of a nuisance. However, it still interferes with and prevents us from undertaking future goals."
-ETH_military_Focus_desc:0 "We’ve decided to focus our budget primarily on military expenditure."
-ETH_production_focus_desc:0 "We’ve decided to focus our budget primarily on production and industrial expansion."
-ETH_construction_focus_desc:0 "We’ve decided to focus our budget primarily on infrastructural upgrades and our construction capability."
-ETH_Tribal_Intergration_desc:0 "Every since we’ve begun the recognisation of the rights of the various tribes and their chiefs, they’ve adopted a much more loyal and co-operative policy towards the state."
-ETH_advisors_germany_desc:0 "Our military officers are working closely with German military advisers to help modernise and better discipline our armed forces."
-ETH_Food_desc:0 "With the issue of famine now solved, our population and economy have been projected to grow in the medium term."
-ETH_Scouts_desc:0 "The youth of our nation, now joining the ESA in droves, possess both noble and admirable goals and will work towards becoming valued and honoured citizens of the empire."
-ETH_Slavery_idea_desc:0 "Slavery is an extremely widespread practice within Ethiopia. Despite efforts, which were mostly symbolic in nature, undertaken by former emperors following Menelik II, slavery and descendants of slaves continue to exist and, despite working hard, receive no pay for their efforts. This institution is both inefficient and a great source of shame for Ethiopia as the practice of slavery is seen as improper for any civilised nation."
-ETH_Land_Reform_idea_desc:0 "We’re now utilising our lands much more efficiently and managing them with modern methods. This had greatly impacted our agricultural output."
-ETH_Aristocratic_Army_desc:0 "Positions held within our armed forces are determined by birth and all of the top positions are held by men who are of noble blood and, yet, as seen in the Weltkrieg, of questionable competence."
-ETH_Speech_Freedom_desc:0 "We now possess laws to protect the peoples’ right to and freedom of speech. Furthermore, we also possess the political will to enforce these new laws."
-ETH_Ethiopian_Welfare_desc:0 "Poverty prevents our citizens from experiencing potential material gain and prosperity. We must protect even the poorest of our subjects, to ensure that each and every single one of them can possess an optimistic future."
-ETH_Lion_of_Judah_idea_desc:0 "The Lion of Judah is more than just a mere dynastic symbol. It stands for all the hardships and challenges that Ethiopia, the one nation to survive colonialism and even triumph against the colonisers, has overcome. Time and time again, in our thousand year history, the empire has stood tall since the Heirs of Solomon had first set foot here."
-ETH_Imperial_Inspiration_desc:0 "Our Emperor is a man who, himself, is larger than life. To any foreigner, he may seem meek in personality and small in stature. However, when he speaks, all listen. He had inherited a broken and bankrupt empire from Zewditu, and everyone can see, yet only few understand, the greatness he truly stands for."
-ETH_Working_Natives_desc:0 "Ever since we’ve begun recognising the rights of the tribes and their chiefs, they, in turn, have begun to co-operate with us."
-ETH_Trained_Pilots_desc:0 "A piloting school, headed by foreign advisers, has been opened in Addis Ababa."
-ETH_Anti_Imp_desc:0 "Those who would attempt to conquer us continually underestimate our. From Wofla to Adwa, envious vultures attempt to break our spirit and subjugate the free people of Ethiopia. Never shall they succeed!"
-ETH_Ethiopian_Guns_idea_desc:0 "By utilising foreign expertise and basing our designs off of external blueprints, we can ensure Ethiopian-made guns, made by Ethiopians for Ethiopians, are of the highest calibre whilst remaining inexpensive."
-ETH_Levy_Army_desc:0 "Ethiopia, unlike the powers of the modern era, does not possess a united and organised army. The ‘army’ of Ethiopia, in fact, belongs to individual lords, whose men are loyal to them and only them."
+ETH_Debt_idea_1_desc:0 "우리의 채무는 치명적인 수준에 달했고 국가의 어깨 위에서 주체못할 부담이 되고 있습니다. 우리의 채무가 우리를 너무나도 구속하기에 사람들은 에티오피아의 독립성에 대해 의문을 제기하기 시작했습니다."
+ETH_Debt_idea_2_desc:0 "대규모 프로젝트를 실행할 수 없게 막은 우리의 엄청난 채무에도 불구하고, 우리는 국가에 가해져온 부담을 줄여나가기 시작했습니다."
+ETH_Debt_idea_3_desc:0 "특정한 조치를 시행할 수 없게 막은 우리의 대형 채무에도 불구하고, 우리는 채무 관리 활동으로 이를 점차적으로 감소시키기 시작했습니다."
+ETH_Debt_idea_4_desc:0 "전반적으로 남아있기는하지만 우리의 빚은 꽤나 처리할 수 있게 되었고 더이상 우리를 제한하지 않습니다."
+ETH_Debt_idea_5_desc:0 "우리의 빚의 상태는 귀찮은 수준으로 감소했습니다. 하지만 이는 여전히 우리에게 개입해서 미래의 목표를 달성하는 것을 막고 있습니다."
+ETH_military_Focus_desc:0 "우리는 우리의 예산을 군사 경비에 우선적으로 집중하기로 결정했습니다."
+ETH_production_focus_desc:0 "우리는 우리의 예산을 생산과 산업 기금에 우선적으로 집중하기로 결정했습니다."
+ETH_construction_focus_desc:0 "우리는 우리의 예산을 기반시설의 개선과 건설 능력에 우선적으로 집중하기로 결정했습니다."
+ETH_Tribal_Intergration_desc:0 "다양한 부족들과 그 족장들의 권리를 인정하기로 시작한 이후 그들은 국가에 더 충성스럽고 협조적인 정책을 채택했습니다."
+ETH_advisors_germany_desc:0 "우리 군의 장교들은 우리의 군대를 현대화하고 더 잘 훈련시키는 것을 도울 독일인 군사 고문들과 가깝게 일하고 있습니다."
+ETH_Food_desc:0 "이제는 기근 문제가 해결되면서 우리의 인구와 경제가 중기적으로 상승할 것으로 예상됩니다."
+ETH_Scouts_desc:0 "우리 나라의 청소년들은 줄지어 에티오피아 스카우트 단에 가입해 고귀하고 숭고한 가치를 추구하고 가치있고 명예로운 시민이 되기 위해 일 할 것입니다."
+ETH_Slavery_idea_desc:0 "노예제는 에티오피아에서 매우 만연한 관습입니다. 메넬리크 2세 이후 전임 황제들의 노력은 사실상 상징적인 것 뿐이었고 노예제와 노예의 후손들은 여전히 존재하고 열심히 일하지만 그들의 노동의 대가를 받지 못합니다. 노예제의 실행은 그 어떠한 문명국에서도 부도덕적인 것으로 간주되기에 이 제도는 비효율적이며 에티오피아의 수치의 원천입니다."
+ETH_Land_Reform_idea_desc:0 "우리는 지금 우리의 땅을 더욱 효율적으로 경영하고 현대적인 방법으로 관리해가고 있습니다. 이는 우리의 농업 생산에 큰 영향을 주었습니다."
+ETH_Aristocratic_Army_desc:0 "우리의 군대에서의 직위는 출생으로 결정되고 모든 최고위직은 세계 대전에서 보여줬던 것처럼 그 능력이 의심스러운 귀족들의 것입니다."
+ETH_Speech_Freedom_desc:0 "우리는 이제 국민의 권리와 표현의 자유를 보장하는 법률을 보유합니다. 더 나아가서 우리는 또한 이 새 법들을 더 강화할 정치적인 의지까지 보유합니다."
+ETH_Ethiopian_Welfare_desc:0 "가난은 우리의 시민들이 물질적인 소득과 풍요의 가능성을 경험하는 것을 막습니다. 우리는 우리 신민들 중 가장 가난한 사람마저도 보호해야만합니다. 이는 모든 개인 각각이 낙관적인 미래를 소유할 수 있게 하는 것입니다."
+ETH_Lion_of_Judah_idea_desc:0 "유다의 사자는 왕조의 상징 그 이상입니다. 이는 식민주의로부터 생존하고 심지어는 식민주의자들로부터 승리한 유일한 국가 에티오피아가 겪은 모든 고난과 도전을 상징합니다. 제국은 솔로몬의 후예가 여기에 첫 발을 내딛은 이후 천년의 역사동안 계속해서 굳게 서있습니다."
+ETH_Imperial_Inspiration_desc:0 "우리의 황제는 전설적인 인물입니다. 외국인들에게는 그는 온화한 성격과 왜소한 모습으로 보일지도 모르겠습니다. 하지만 그가 말하면 모든 이가 듣습니다. 그는 자우디투로부터 망가지고 파산된 제국을 물려받았으며 모든 이가 그가 나타내는 진정한 위대함을 볼 수 있지만 이를 이해하는 이는 소수뿐입니다."
+ETH_Working_Natives_desc:0 "부족들과 그 족장들의 권리를 인정하기로 한 이후로 그들은 차례차례 우리에 대해 협력하기 시작했습니다."
+ETH_Trained_Pilots_desc:0 "외국인 조언가들이 지도하는 항공학교가 아디스아바바에 개교했습니다."
+ETH_Anti_Imp_desc:0 "우리를 정복하고자하는 이들은 지속적으로 우리를 과소평과해왔습니다. 워플라부터 아도와까지 시기심 많은 약탈자들은 우리의 정신을 부수고 에티오피아의 자유로운 국민들을 예속하려 합니다. 그들은 결코 성공할수 없을 것입니다!"
+ETH_Ethiopian_Guns_idea_desc:0 "외국의 기술을 이용하고 외형적 설계도는 우리의 디자인을 기초로 해서, 우리는 에티오피아인이 만든 에티오피아 인을 위한 에티오피아 산 총기가 값싸지만 높은 역량을 가지도록 했습니다."
+ETH_Levy_Army_desc:0 "에티오피아는 근대의 강대국들과는 달리 통일되고 조직화된 군대를 가지고 있지 않습니다. 실제로는 에티오피아의 '군대'는 귀족들 개개인의 소유이며 사람들은 귀족들에게 충성하며 오직 그들에게만 충성합니다."
 
 
 ### Focuses ###
